[gd_scene load_steps=6 format=2]

[ext_resource path="res://Script/Npc/State_machine/State_machine_npc_neutral.gd" type="Script" id=1]
[ext_resource path="res://Script/Npc/State_machine/State_machine_npc_neutral_neutral.gd" type="Script" id=2]
[ext_resource path="res://Script/Npc/State_machine/State_machine_npc_neutral_investigation_1.gd" type="Script" id=3]
[ext_resource path="res://Script/Npc/State_machine/State_machine_npc_neutral_combat.gd" type="Script" id=4]
[ext_resource path="res://Script/Npc/State_machine/State_machine_npc_neutral_flee.gd" type="Script" id=5]

[node name="State_machine_npc_neutral" type="Spatial"]
script = ExtResource( 1 )

[node name="Neutral" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="Investigation_1" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="Timer_small_time_visible" type="Timer" parent="Investigation_1"]
wait_time = 2.0

[node name="Timer_small_time_no_visible" type="Timer" parent="Investigation_1"]
wait_time = 2.0

[node name="Combat" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="Timer_long_time" type="Timer" parent="Combat"]
wait_time = 3.0

[node name="Flee" type="Spatial" parent="."]
script = ExtResource( 5 )

[connection signal="timeout" from="Investigation_1/Timer_small_time_visible" to="Investigation_1" method="_on_Timer_small_time_visible_timeout"]
[connection signal="timeout" from="Investigation_1/Timer_small_time_no_visible" to="Investigation_1" method="_on_Timer_small_time_no_visible_timeout"]
[connection signal="timeout" from="Combat/Timer_long_time" to="Combat" method="_on_Timer_long_time_timeout"]
